[package]
name = "echoip"
version = "0.1.0"
authors = ["Michael Laccetti <michael@laccetti.com>"]
edition = "2018"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE"]

[[bin]]
name = "echoip"
path = "src/main.rs"

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.3"
derive_more = "0.99.17"
dns-lookup = "1.0.8"
env_logger = "0.9.0"
handlebars = { version = "4.2.1", features = ["dir_source"] }
log = "0.4.14"
maxminddb = "0.21.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
